--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="images/favicon-32x32.png">
+    <link rel="icon" href="favicon-32x32.png">
     <title>Frontend Mentor | Order summary card</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="main">
-        <img src="images/illustration-hero.svg" alt="illustration-hero" width="100%">
+        <img src="illustration-hero.svg" alt="illustration-hero" width="100%">
         <div class="heading"><h2 class="title">Order Summary</h2>
         <p class="description">You can now listen to millions of songs, audiobooks, and podcasts on any 
             device anywhere you like!</p>
         </div>    
         <div class="plan">
-            <img src="images/icon-music.svg" alt="icon-music">
+            <img src="icon-music.svg" alt="icon-music">
          <div class="plandescription">
             <strong>Annual Plan</strong>
             <p>$59.99/year</p>
